--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <script src="http://d3js.org/d3.v3.min.js" type="text/javascript"></script>
     <script src="http://cdn.leafletjs.com/leaflet-0.7/leaflet.js"></script>
     <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.4/mapbox.js'></script>
+    <script src="js/vendor/instafeed.min.js"></script>
+    <script src="js/vendor/jquery-1.11.2.min.js"></script>
+   <!-- <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>-->
     <link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.4/mapbox.css' rel='stylesheet' />
     <style>
     html,
@@ -14,55 +17,71 @@
         height: 100%;
         width: 100%;
     }
+
     body {
         margin: 0;
     }
+
     #map {
         width: 100%;
         height: 100%;
     }
+
     svg {
         position: relative;
     }
+
     path {
         fill: yellow;
         stroke-width: 2px;
         stroke: red;
         stroke-opacity: 1;
     }
+
     .travelMarker {
         fill: yellow;
         opacity: 0.75;
     }
+
     .waypoints {
         fill: black;
         opacity: 0;
     }
-}
-.drinks {
-    stroke: black;
-    fill: red;
-}
-.lineConnect {
-    fill: none;
-    stroke: black;
-    opacity: 1;
-}
-.locnames {
-    fill: black;
-    text-shadow: 1px 1px 1px #FFF, 3px 3px 5px #000;
-    font-weight: bold;
-    font-size: 13px;
-}
+
+    .drinks {
+        stroke: black;
+        fill: red;
+    }
+
+    .lineConnect {
+        fill: none;
+        stroke: black;
+        opacity: 1;
+    }
+
+    .locnames {
+        fill: black;
+        text-shadow: 1px 1px 1px #FFF, 3px 3px 5px #000;
+        font-weight: bold;
+        font-size: 13px;
+    }
     </style>
 
 </head>
 
 <body>
 
+    <form>
+      User name:<br>
+      <input type="text" name="userName" id="userHandle">
+      <br>
+      <input type="submit" value="Submit" id="button">
+    </form>
+
     <div id="demo"></div>
     <div id="map"></div>
-    <script type="text/javascript" src="main.js"></script>
+    <div id="feed-test" style="display:none"></div>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 
 </html>
