animate and map button

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     path {
         fill: yellow;
         stroke-width: 2px;
-        stroke: red;
+        stroke: #ff8888;
         stroke-opacity: 1;
     }
 
     .travelMarker {
-        fill: yellow;
+        fill: #ff8888;
         opacity: 0.75;
     }
 
@@ -50,12 +50,12 @@
 
     .drinks {
         stroke: black;
-        fill: red;
+        fill: #ff8888;
     }
 
     .lineConnect {
         fill: none;
-        stroke: black;
+        stroke: #ff8888;
         opacity: 1;
     }
 
@@ -75,8 +75,9 @@
       User name:<br>
       <input type="text" name="userName" id="userHandle">
       <br>
-      <input type="submit" value="Submit" id="button">
-    
+      <input type="submit" value="Get map" id="mapButton">
+      <input type="submit" value="Animate!" id="animateButton">
+
     </form>
 
     <div id="demo"></div>
