animate user 1 and animate user 2 working

--- a/index.html
+++ b/index.html
@@ -72,11 +72,16 @@
 <body>
 
     <form>
-      User name:<br>
-      <input type="text" name="userName" id="userHandle">
+      User name #1:<br>
+      <input type="text" name="userName1" id="userHandle1">
+      <br>
+      User name #2:<br>
+      <input type="text" name="userName2" id="userHandle2">
       <br>
       <input type="submit" value="Get map" id="mapButton">
-      <input type="submit" value="Animate!" id="animateButton">
+      <input type="submit" value="Animate User 1!" id="animateButton1">
+      <input type="submit" value="Animate User 2!" id="animateButton2">
+      <input type="submit" value="Look at someone else!" id="someoneElseButton">
 
     </form>
 
