user 1 user 2 different colors

--- a/index.html
+++ b/index.html
@@ -31,31 +31,52 @@
         position: relative;
     }
 
-    path {
+    /*path {
         fill: yellow;
         stroke-width: 2px;
         stroke: #ff8888;
         stroke-opacity: 1;
-    }
+    }*/
 
-    .travelMarker {
+    .travelMarker1 {
         fill: #ff8888;
         opacity: 0.75;
     }
 
-    .waypoints {
+    .waypoints1 {
         fill: black;
         opacity: 0;
     }
 
-    .drinks {
+    .travelMarker2 {
+        fill: #B7C8FF;
+        opacity: 0.75;
+    }
+
+    .waypoints2 {
+        fill: black;
+        opacity: 0;
+    }
+
+    .extremities1 {
         stroke: black;
         fill: #ff8888;
     }
 
-    .lineConnect {
+    .extremities2 {
+        stroke: black;
+        fill: #B7C8FF;
+    }
+
+    .lineConnect1 {
         fill: none;
         stroke: #ff8888;
+        opacity: 1;
+    }
+
+    .lineConnect2 {
+        fill: none;
+        stroke: #B7C8FF;
         opacity: 1;
     }
 
@@ -79,8 +100,8 @@
       <input type="text" name="userName2" id="userHandle2">
       <br>
       <input type="submit" value="Get map" id="mapButton">
-      <input type="submit" value="Animate User 1!" id="animateButton1">
-      <input type="submit" value="Animate User 2!" id="animateButton2">
+      <input type="submit" value="Animate User #1!" id="animateButton1">
+      <input type="submit" value="Animate User #2!" id="animateButton2">
       <input type="submit" value="Look at someone else!" id="someoneElseButton">
 
     </form>
