--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <input type="submit" value="Get map" id="mapButton">
       <input type="submit" value="Animate User #1!" id="animateButton1">
       <input type="submit" value="Animate User #2!" id="animateButton2">
-      <input type="submit" value="Look at someone else!" id="someoneElseButton">
+      <input type="submit" value="Look at other people!" id="someoneElseButton">
 
     </form>
 
